"Updates for mobile functionality and implemented third project"

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     </div>
 
                     <div class="project-card">
-                    <a href="https://github.com/yourusername/project3" target="_blank" class="project-box">
-                        <img src="imgs/project3.png" alt="Magic Tools Screenshot" />
+                    <a href="https://github.com/iamchashuff/MagicTools" target="_blank" class="project-box">
+                        <img src="imgs/magictools-ss.png" alt="Magic Tools Screenshot" />
                     </a>
                     <p class="project-title">Magic Tools (MTG Assistant)</p>
                 </div>
